Melhorias no codigo e implementei o scrool automatico para pag2 que será a de projetos.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 <body>
 
     <section class="page" id="pagina1">
-        <canvas id="starsCanvas"></canvas>
 
         <div class="header-title">
             <h1 class="site-title">Bernardo Paranhos</h1>
@@ -29,8 +28,9 @@
         </div>
 
         <div class="links-inferiores">
+            <a href="#" class="link-inferior" id="botao-sobre">PROJETOS</a>
+
             <a href="#" class="link-inferior">SOBRE</a>
-            <a href="#" class="link-inferior">PROJETOS</a>
 
             <div class="social-icons-container">
                 <svg class="social-icon" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
@@ -64,13 +64,6 @@
                     </g>
                 </svg>
 
-                <span class="location-info">
-                    <svg class="location-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
-                        <path
-                            d="M215.7 499.2C267 435 384 279.4 384 192C384 86 298 0 192 0S0 86 0 192c0 87.4 117 243 168.3 307.2c12.3 15.3 35.1 15.3 47.4 0zM192 128a64 64 0 1 1 0 128 64 64 0 1 1 0-128z" />
-                    </svg>
-                    Brasil
-                </span>
             </div>
         </div>
 
@@ -84,7 +77,12 @@
     </section>
 
     <section class="page" id="pagina2">
+       
     </section>
+
+
+
+
 
     <section class="page" id="pagina3">
     </section>
