--- a/index.html
+++ b/index.html
@@ -12,72 +12,129 @@
 
 <body>
 
+
     <section class="page" id="pagina1">
-
-        <div class="header-title">
-            <h1 class="site-title">Bernardo Paranhos</h1>
-            <h2 class="site-subtitle">Desenvolvedor Frontend</h2>
-            <p class="site-description">Eu crio experiências digitais incríveis, envolventes e temáticas.</p>
+        <div class="profile-picture-container">
+            <img src="IMG_3485.jpg" alt="Sua Foto" class="profile-picture">
         </div>
 
-        <div class="mensagem-direita">
-            Meu nome é Bernardo Paranhos, e sou um desenvolvedor frontend apaixonado por construir soluções web que unem
-            estética clean à funcionalidade robusta. Desde websites institucionais a lojas virtuais e portfólios,
-            priorizo cada detalhe para entregar produtos digitais de alta qualidade, sempre com um olhar atento às
-            últimas tendências e tecnologias.
-        </div>
-
-        <div class="links-inferiores">
-            <a href="#" class="link-inferior" id="botao-sobre">PROJETOS</a>
-
-            <a href="#" class="link-inferior">SOBRE</a>
-
-            <div class="social-icons-container">
-                <svg class="social-icon" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <title>github [#142]</title>
-                    <desc>Created with Sketch.</desc>
-                    <defs></defs>
-                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                        <g id="Dribbble-Light-Preview" transform="translate(-140.000000, -7559.000000)" fill="#ffffff">
-                            <g id="icons" transform="translate(56.000000, 160.000000)">
-                                <path
-                                    d="M94,7399 C99.523,7399 104,7403.59 104,7409.253 C104,7413.782 101.138,7417.624 97.167,7418.981 C96.66,7419.082 96.48,7418.762 96.48,7418.489 C96.48,7418.151 96.492,7417.047 96.492,7415.675 C96.492,7414.719 96.172,7414.095 95.813,7413.777 C98.04,7413.523 100.38,7412.656 100.38,7408.718 C100.38,7407.598 99.992,7406.684 99.35,7405.966 C99.454,7405.707 99.797,7404.664 99.252,7403.252 C99.252,7403.252 98.414,7402.977 96.505,7404.303 C95.706,7404.076 94.85,7403.962 94,7403.958 C93.15,7403.962 92.295,7404.076 91.497,7404.303 C89.586,7402.977 88.746,7403.252 88.746,7403.252 C88.203,7404.664 88.546,7405.707 88.649,7405.966 C88.01,7406.684 87.619,7407.598 87.619,7408.718 C87.619,7412.646 89.954,7413.526 92.175,7413.785 C91.889,7414.041 91.63,7414.493 91.54,7415.156 C90.97,7415.418 89.522,7415.871 88.63,7414.304 C88.63,7414.304 88.101,7413.319 87.097,7413.247 C87.097,7413.247 86.122,7413.234 87.029,7413.87 C87.029,7413.87 87.684,7414.185 88.139,7415.37 C88.139,7415.37 88.726,7417.2 91.508,7416.58 C91.513,7417.437 91.522,7418.245 91.522,7418.489 C91.522,7418.76 91.338,7419.077 90.839,7418.982 C86.865,7417.627 84,7413.783 84,7409.253 C84,7403.59 88.478,7399 94,7399"
-                                    id="github-[#142]"></path>
-                            </g>
-                        </g>
+        <div class="code-icon-container">
+            <?xml version="1.0" encoding="iso-8859-1"?>
+            <svg height="800px" width="800px" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 511.998 511.998" xml:space="preserve">
+                <g>
+                    <g>
+                        <path d="M416.85,312.867c28.195-2.234,49.378-10.779,64.41-25.987c26.517-26.829,31.396-70.581,30.672-132.478l-0.204-17.447
+    			H320.235c-3.036-17.828-12.651-28.574-20.011-36.789c-7.466-8.331-11.971-13.36-11.971-24.997s4.505-16.666,11.971-24.997
+    			l-26.296-23.561c-8.854,9.882-20.981,23.417-20.981,48.557s12.128,38.674,20.981,48.557c4.37,4.876,7.714,8.628,9.746,13.228
+    			h-41.111c-3.036-17.828-12.651-28.574-20.011-36.789c-7.466-8.331-11.971-13.36-11.971-24.996
+    			c0-11.637,4.505-16.666,11.971-24.997c8.854-9.882,20.981-23.417,20.981-48.557h-35.306c0,11.637-4.505,16.666-11.971,24.997
+    			c-8.854,9.882-20.981,23.417-20.981,48.557s12.128,38.674,20.981,48.557c4.37,4.876,7.714,8.628,9.746,13.228H5.884v75.119
+    			c0,46.706,14.52,91.357,41.99,129.13l54.566,75.03H0v47.074c0,25.957,21.118,47.074,47.074,47.074h353.058
+    			c25.957,0,47.074-21.118,47.074-47.074v-47.074H344.763l54.567-75.03C405.927,332.134,411.769,322.663,416.85,312.867z
+    			 M441.321,212.074v-39.813h35.344c-0.397,42.472-4.775,73.874-20.516,89.8c-5.897,5.967-13.753,10.189-23.937,12.817
+    			C438.229,254.694,441.321,233.603,441.321,212.074z M411.901,451.539v11.769c0,6.489-5.279,11.769-11.769,11.769H47.074
+    			c-6.489,0-11.769-5.279-11.769-11.769v-11.769H411.901z M301.108,416.233h-155.01l-69.67-95.795
+    			C53.375,288.74,41.19,251.268,41.19,212.074v-39.813h360.043h4.784v39.813c0,39.193-12.185,76.665-35.237,108.364L301.108,416.233
+    			z" />
                     </g>
-                </svg>
-                <svg class="social-icon" viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg"
-                    xmlns:xlink="http://www.w3.org/1999/xlink">
-                    <title>linkedin [#161]</title>
-                    <desc>Created with Sketch.</desc>
-                    <defs></defs>
-                    <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
-                        <g id="Dribbble-Light-Preview" transform="translate(-180.000000, -7479.000000)" fill="#ffffff">
-                            <g id="icons" transform="translate(56.000000, 160.000000)">
-                                <path
-                                    d="M144,7339 L140,7339 L140,7332.001 C140,7330.081 139.153,7329.01 137.634,7329.01 C135.981,7329.01 135,7330.126 135,7332.001 L135,7339 L131,7339 L131,7326 L135,7326 L135,7327.462 C135,7327.462 136.255,7325.26 139.083,7325.26 C141.912,7325.26 144,7326.986 144,7330.558 L144,7339 L144,7339 Z M126.442,7323.921 C125.093,7323.921 124,7322.819 124,7321.46 C124,7320.102 125.093,7319 126.442,7319 C127.79,7319 128.883,7320.102 128.883,7321.46 C128.884,7322.819 127.79,7323.921 126.442,7323.921 L126.442,7323.921 Z M124,7339 L129,7339 L129,7326 L124,7326 L124,7339 Z"
-                                    id="linkedin-[#161]"></path>
-                            </g>
-                        </g>
+                </g>
+                <g>
+                    <g>
+                        <polygon
+                            points="288.967,238.629 264.003,263.592 293.888,293.477 264.003,323.362 288.967,348.326 343.816,293.477 		" />
                     </g>
-                </svg>
-
-            </div>
+                </g>
+                <g>
+                    <g>
+                        <polygon
+                            points="185.404,263.592 160.439,238.629 105.59,293.477 160.439,348.326 185.404,323.362 155.518,293.477 		" />
+                    </g>
+                </g>
+                <g>
+                    <g>
+                        <polygon points="223.512,213.451 189.817,373.504 225.895,373.504 259.591,213.451 		" />
+                    </g>
+                </g>
+            </svg>
         </div>
 
-        <div class="scroll-indicator-vertical">
-            <span class="scroll-text-vertical">ROLAGEM</span>
-            <div class="scroll-line-vertical"></div>
+        <div class="intro-block">
+            <h1>Olá pessoas!</h1>
+            <p>Eu sou Bernardo, um desenvolvedor web apaixonado por tecnologia, que desenvolve aplicações robustas e
+                inovadoras por mais de 5 anos, tenho experiência em JavaScript, React, Node.js e metodologias ágeis.</p>
         </div>
 
+        <div class="education-block">
+            <h2>Educação</h2>
+            <h3>Bacharel em Engenharia de Software - Universidade Federal Fluminense (UFF)</h3>
+            <p class="education-date">2020 - 2024</p>
+        </div>
 
+        <div class="experience-block">
+            <h2>Experiência</h2>
 
+            <h3>Tech Solutions S.A.</h3>
+            <p>Desenvolvedor Front-end Sênior</p>
+            <p class="experience-location-date">Remoto | 2022 - Atualmente</p>
+
+            <h3>Startup Inovação Digital</h3>
+            <p>Desenvolvedor Júnior</p>
+            <p class="experience-location-date">São Paulo, SP | 2020 - 2022</p>
+
+            <h3>Agência Criativa Web</h3>
+            <p>Estagiário de Desenvolvimento Web</p>
+            <p class="experience-location-date">Rio de Janeiro, RJ | 2019 - 2020</p>
+
+            <h3>Freelancer</h3>
+            <p>Desenvolvedor Full-stack</p>
+            <p class="experience-location-date">Online | 2018 - 2019</p>
+        </div>
+
+        <div class="soft-skills-block">
+            <h2>Soft Skills</h2>
+            <ul>
+                <li>Comunicação eficaz</li>
+                <li>Trabalho em equipe</li>
+                <li>Resolução de problemas</li>
+                <li>Pensamento crítico</li>
+                <li>Adaptabilidade</li>
+            </ul>
+        </div>
+
+        <div class="software-skills-block">
+            <h2>Software Skills</h2>
+            <ul>
+                <li>JavaScript (ES6+)</li>
+                <li>React</li>
+                <li>Node.js</li>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>Git</li>
+            </ul>
+        </div>
+
+        <div class="languages-block">
+            <h2>Línguas</h2>
+            <h3>Português (Brasileiro) - Nativo</h3>
+        </div>
+
+        <div class="contact-info-block">
+            <p><strong>Email:</strong> <a
+                    href="mailto:seu.email.ficticio@example.com">seu.email.ficticio@example.com</a></p>
+            <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/seu-perfil-ficticio"
+                    target="_blank">linkedin.com/in/seu-perfil-ficticio</a></p>
+            <p><strong>GitHub:</strong> <a href="https://github.com/seu-usuario-ficticio"
+                    target="_blank">github.com/seu-usuario-ficticio</a></p>
+        </div>
     </section>
 
+
+
+
+
     <section class="page" id="pagina2">
-       
+
     </section>
 
 
