Leves alterações e adicionei a foto basciamente.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="page" id="pagina1">
         <div class="profile-picture-container">
-            <img src="IMG_3485.jpg" alt="Sua Foto" class="profile-picture">
+            <img src="imagens/width_3711.jpeg" alt="Sua Foto" class="profile-picture">
         </div>
 
         <div class="code-icon-container">
@@ -67,7 +67,7 @@
 
         <div class="education-block">
             <h2>Educação</h2>
-            <h3>Bacharel em Engenharia de Software - Universidade Federal Fluminense (UFF)</h3>
+            <h3>Bacharel em Engenharia de Software - Universidade (XXX)</h3>
             <p class="education-date">2020 - 2024</p>
         </div>
 
