Atualizações simples sem modificações.

--- a/index.html
+++ b/index.html
@@ -61,40 +61,25 @@
 
         <div class="intro-block">
             <h1>Olá pessoas!</h1>
-            <p>Eu sou Bernardo, um desenvolvedor web apaixonado por tecnologia, que desenvolve aplicações robustas e
-                inovadoras por mais de 5 anos, tenho experiência em JavaScript, React, Node.js e metodologias ágeis.</p>
+            <p>Eu sou Bernardo, um desenvolvedor frontend apaixonado por tecnologia, desenvolvo aplicações estéticas e
+                inovadoras a alguns meses, tenho experiência em JavaScript, html e css.</p>
         </div>
 
         <div class="education-block">
             <h2>Educação</h2>
-            <h3>Bacharel em Engenharia de Software - Universidade (XXX)</h3>
-            <p class="education-date">2020 - 2024</p>
+            <h3>Aprofundando em JavaScript, react e melhores praticas de desenvolvimento.</h3>
         </div>
 
         <div class="experience-block">
             <h2>Experiência</h2>
-
-            <h3>Tech Solutions S.A.</h3>
-            <p>Desenvolvedor Front-end Sênior</p>
-            <p class="experience-location-date">Remoto | 2022 - Atualmente</p>
-
-            <h3>Startup Inovação Digital</h3>
-            <p>Desenvolvedor Júnior</p>
-            <p class="experience-location-date">São Paulo, SP | 2020 - 2022</p>
-
-            <h3>Agência Criativa Web</h3>
-            <p>Estagiário de Desenvolvimento Web</p>
-            <p class="experience-location-date">Rio de Janeiro, RJ | 2019 - 2020</p>
-
-            <h3>Freelancer</h3>
-            <p>Desenvolvedor Full-stack</p>
-            <p class="experience-location-date">Online | 2018 - 2019</p>
+            <h3>Projetos pessoais</h3>
+            
         </div>
 
         <div class="soft-skills-block">
             <h2>Soft Skills</h2>
             <ul>
-                <li>Comunicação eficaz</li>
+                <li>Inteligencia emocional</li>
                 <li>Trabalho em equipe</li>
                 <li>Resolução de problemas</li>
                 <li>Pensamento crítico</li>
@@ -105,9 +90,7 @@
         <div class="software-skills-block">
             <h2>Software Skills</h2>
             <ul>
-                <li>JavaScript (ES6+)</li>
-                <li>React</li>
-                <li>Node.js</li>
+                <li>JavaScript</li>
                 <li>HTML5</li>
                 <li>CSS3</li>
                 <li>Git</li>
@@ -120,8 +103,8 @@
         </div>
 
         <div class="contact-info-block">
-            <p><strong>Email:</strong> <a
-                    href="mailto:seu.email.ficticio@example.com">seu.email.ficticio@example.com</a></p>
+            <p><strong>Email:</strong> <a href="mailto:seu.email.ficticio@example.com">beparanhosborges@gmail.com</a>
+            </p>
             <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/seu-perfil-ficticio"
                     target="_blank">linkedin.com/in/seu-perfil-ficticio</a></p>
             <p><strong>GitHub:</strong> <a href="https://github.com/seu-usuario-ficticio"
